added hover effects

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -57,7 +57,7 @@
     width: 58px;
     height: 62px;
 
-    @include hover (transform, scale(1.05));
+    @include hover(transform, scale(1.05));
   }
 
   &__icons {
@@ -77,7 +77,7 @@
     width: 24px;
     height: 24px;
 
-    @include hover (transform, scale(1.2));
+    @include hover(transform, scale(1.2));
 
     &--facebook {
       background-image: url(../images/Footer/Facebook.webp);
@@ -132,7 +132,7 @@
     }
 
     &-descriprion {
-      font-family:  $IBM-Plex-Sans-font;
+      font-family: $IBM-Plex-Sans-font;
       font-size: 14px;
       margin: 0;
       line-height: 21px;
@@ -175,17 +175,20 @@
     }
 
     &-item {
-      font-family:  $IBM-Plex-Sans-font;
+      font-family: $IBM-Plex-Sans-font;
       font-size: 14px;
       margin: 0;
       line-height: 21px;
 
-      @include hover (transform, scale(1.02));
+      &:hover {
+        transform: scale(0.98);
+        transition: transform 0.1s;
+      }
     }
   }
 
   &__nav {
-    border-top: 1px solid #1A5A4C80;
+    border-top: 1px solid #1a5a4c80;
     grid-column: 1 / -1;
 
     @include on-tablet {
@@ -196,8 +199,7 @@
       margin-left: 32px;
       grid-column: 7 / 12;
       border-top: none;
-      border-left: 1px solid #1A5A4C80;
-      ;
+      border-left: 1px solid #1a5a4c80;
     }
 
     &-list {
@@ -218,7 +220,10 @@
     }
 
     &-item {
-      @include hover (transform, scale(1.01));
+      &:hover {
+        transform: scale(0.98);
+        transition: transform 0.1s;
+      }
     }
 
     &-link {
@@ -281,7 +286,7 @@
     background-size: cover;
     width: 24px;
     height: 24px;
-    transition: scale .3s;
+    transition: scale 0.3s;
     display: block;
   }
 }
