--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,9 @@
   right: 0;
   max-height: 0;
   transform: translateY(-100%);
-  transition: max-height 0.5s ease, transform 0.5s ease;
+  transition:
+    max-height 0.5s ease,
+    transform 0.5s ease;
   z-index: 10;
 
   @include on-tablet {
@@ -56,7 +58,7 @@
       width: 24px;
       height: 24px;
 
-      @include hover (transform, scale(1.1));
+      @include hover(transform, scale(1.1));
     }
 
     &-list {
@@ -85,7 +87,10 @@
       margin: 0;
       text-align: left;
 
-      @include hover (transform, scale(1.05));
+      &:hover {
+        transition: transform 0.1s;
+        transform: scale(0.98);
+      }
     }
 
     &-link {
@@ -168,7 +173,7 @@
     }
 
     &-descriprion {
-      font-family:  $IBM-Plex-Sans-font;
+      font-family: $IBM-Plex-Sans-font;
       font-size: 14px;
       margin: 0;
       line-height: 21px;
