--- a/src/styles/blocks/following.scss
+++ b/src/styles/blocks/following.scss
@@ -79,8 +79,6 @@
       height: 50px;
       border-radius: 0;
 
-      @include hover (transform, scale(1.02));
-
       &:hover {
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
       }
@@ -135,7 +133,13 @@
       cursor: pointer;
 
       &:hover {
-        @include hover (transform, scale(0.95));
+        background-color: $red-acc;
+      }
+
+      @include on-desktop {
+        &:hover {
+          transform: scale(0.98);
+        }
       }
 
       @include on-tablet {
