--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 
   @include on-desktop {
     display: none;
@@ -43,6 +43,7 @@
   width: 700%;
   display: flex;
   gap: 16px;
+  transition: margin-left 1s ease;
 
   @include on-tablet {
     width: 900%;
@@ -100,48 +101,9 @@
     &:not(:last-child) {
       margin-right: 22px;
     }
-
-    &:hover {
-      background: $green;
-    }
   }
 }
 
-@media (max-width: 767px) {
-  [id='radio1']:checked ~ .first {
-    margin-left: 0;
-  }
-
-  [id='radio2']:checked ~ .first {
-    margin-left: -15%;
-  }
-
-  [id='radio3']:checked ~ .first {
-    margin-left: -30%;
-  }
-
-  [id='radio4']:checked ~ .first {
-    margin-left: -44%;
-  }
-}
-
-@media (min-width: 768px) {
-  [id='radio1']:checked ~ .first {
-    margin-left: 0;
-  }
-
-  [id='radio2']:checked ~ .first {
-    margin-left: -6%;
-  }
-
-  [id='radio3']:checked ~ .first {
-    margin-left: -16%;
-  }
-
-  [id='radio4']:checked ~ .first {
-    margin-left: -22%;
-  }
-}
 
 .gallery__photos {
   display: none;
@@ -189,4 +151,8 @@
 
 .main__title--gallery {
   margin-top: 0 !important;
+}
+
+.active {
+  background-color: $green;
 }
