--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -137,13 +137,11 @@
 
     @include on-tablet {
       height: 390px;
-      margin-top: 48px;
-      margin-inline: 20px;
+      margin: 48px 20px 183px;
     }
 
     @include on-desktop {
       height: 550px;
-      margin: 0;
     }
   }
 
@@ -204,6 +202,7 @@
     text-align: center;
 
     @include on-tablet {
+      text-align: left;
       font-size: 36px;
       line-height: 36px;
     }
