--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -1,18 +1,11 @@
 .events {
   &__title {
-    @include font-montserrat-bold;
-
     margin-bottom: 40px;
-
-    font-size: 36px;
-    line-height: 36px;
-    text-align: center;
 
     @include on-tablet {
       margin-bottom: 48px;
       align-self: start;
-      font-size: 48px;
-      line-height: 48px;
+      text-align: left;
     }
 
     @include on-desktop {
