--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,3 +1,47 @@
 .gallery {
-  color: red;
+  &__title {
+    margin-bottom: 40px;
+  }
+
+  &__swiper {
+    margin-bottom: 100px;
+
+    @include on-desktop {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__images {
+    display: none;
+
+    @include on-desktop {
+      @include page-grid;
+
+      row-gap: 30px;
+    }
+  }
+
+  &__img {
+    max-width: 100%;
+
+    &--1 {
+      grid-column: span 4;
+      height: 600px;
+    }
+
+    &--2 {
+      grid-column: span 8;
+      height: 600px;
+    }
+
+    &--3 {
+      grid-column: span 8;
+      height: 360px;
+    }
+
+    &--4 {
+      grid-column: span 4;
+      height: 360px;
+    }
+  }
 }
