--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,7 +1,10 @@
 @import 'blocks/page';
 @import 'blocks/header';
+@import 'blocks/h2-title';
 @import 'blocks/menu';
 @import 'blocks/icons';
 @import 'blocks/button';
 @import 'blocks/events';
 @import 'blocks/event';
+@import 'blocks/gallery';
+@import 'blocks/swiper';
