--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -92,7 +92,7 @@
   }
 
   .gallery {
-    margin: 0 0 200px ;
+    margin: 0 auto 200px ;
 
     &__indicators {
       display: none;
@@ -107,7 +107,8 @@
     }
 
     &__swiper {
-      width: 100%;
+      width: 95vw;
+      margin: 0 auto;
     }
   }
 }
