--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,12 +6,17 @@
   }
 
   &__item{
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
     text-align: left;
     color: #fff;
+
+    &:hover {
+      cursor: pointer;
+      color: #ffffffb9;
+      }
   }
   &__link{
     text-decoration: none;
