--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -31,7 +31,7 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   line-height: 1.5;
 }
 
@@ -41,6 +41,6 @@ a {
 }
 
 .container {
-  @include content-padding-inline();
+  @include content-padding-inline;
 }
 
