--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -32,7 +32,7 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
-    color: #ffffff;
+    color: #fff;
     margin: 0;
   }
 
@@ -41,7 +41,7 @@
     font-size: 18px;
     line-height: 27px;
     margin: 20px 0 50px;
-    color: #ffffff;
+    color: #fff;
   }
 
   &__form {
@@ -65,7 +65,7 @@
 
   &__button {
     background-color: #f14A27;
-    color: #ffffff;
+    color: #fff;
     border: none;
     padding: 0 10px;
     cursor: pointer;
@@ -127,7 +127,8 @@
 @include on-desktop {
   .subscription {
   height: 550px;
-  width: 110vw;
+  margin-left: -55px;
+    margin-right: -55px;
 
   &__title {
     font-size: 48px;
