--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,9 +10,9 @@
 @import 'blocks/menu';
 @import 'blocks/nav';
 @import 'blocks/current-events';
-@import 'blocks/gallery.scss';
-@import 'blocks/subscription.scss';
-@import 'blocks/footer.scss';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
 
 body {
   background: $c-gray;
