--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -43,7 +43,7 @@
   }
 
   &__title {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
@@ -66,7 +66,7 @@
     text-align: left;
     font-weight: 300;
     color: #4E4E4E;
-    margin: 10px 0 60px 0;
+    margin: 10px 0 60px;
   }
 }
 
@@ -85,8 +85,8 @@
     position: absolute;
     left: 20px;
     right: 20px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 2px 0px 0px #1A5A4C40;
+    background-color: #FFF;
+    box-shadow: 0 2px 0 0 #1A5A4C40;
     text-align: center;
     top: 150px;
   }
@@ -125,13 +125,13 @@
   }
 
   &__title {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
     text-align: center;
     color: #0F0E08;
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
   }
 }
 
@@ -158,7 +158,7 @@
 
     &__about {
       width: 460px;
-      margin: 15px 0 64px 0;
+      margin: 15px 0 64px;
     }
   }
 
@@ -173,14 +173,14 @@
       right: 65px;
       text-align: left;
       top:306px;
-      padding: 45px 55px 50px 55px;
+      padding: 45px 55px 50px;
     }
 
     &__info {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 0 0 16px 0;
+      margin: 0 0 16px;
     }
 
     &__header {
@@ -243,24 +243,23 @@
 
   .lecture {
     height: 550px;
-    width: 110vw;
-    margin-left: calc(50% - 50vw);
+    margin-left: -55px;
+    margin-right: -55px;
     margin-bottom: 302px;
 
     &__content {
-      left: 355px;
-      right: 355px;
       text-align: left;
       top: 448px;
-      padding: 45px 100px 50px 100px;
+      padding: 45px 100px 50px;
       width: 570px;
+      margin: auto;
     }
 
     &__info {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 0 0 23px 0;
+      margin: 0 0 23px;
     }
 
     &__header {
@@ -281,5 +280,12 @@
       line-height: 36px;
       text-align: left;
     }
+  }
+}
+
+@media (min-width: 1580px) {
+  .lecture {
+  margin-left: -55px;
+  margin-right: -55px;
   }
 }
