--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -44,6 +44,11 @@
   border: none;
   padding: 0;
   cursor: pointer;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #15463D;
+  }
 }
 
 .pointer {
@@ -87,7 +92,7 @@
 
     &__title {
       text-align: left;
-      margin: 0 0 38px 0;
+      margin: 0 0 38px;
       font-size: 54px;
       line-height: 65px;
     }
@@ -129,7 +134,7 @@
 
     &__title {
         text-align: left;
-        margin: 0 0 38px 0;
+        margin: 0 0 38px;
         font-size: 72px;
         line-height: 86px;
     }
