--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,6 +8,7 @@
 
   &__top {
     @include page-grid;
+
     align-items: start;
     margin: 0 0 24px;
     column-gap: 0;
@@ -91,7 +92,7 @@
       justify-content: space-between;
       border-bottom: none;
       margin-bottom: 24px;
-      padding: 39 0 24px 0;
+      padding: 39 0 24px;
     }
 
     .icon--close {margin-right: 38px;}
@@ -130,7 +131,7 @@
       grid-column: 5 / -1;
       max-width: 144px;
       position: relative;
-      bottom: 0px;
+      bottom: 0;
     }
   }
 
@@ -152,7 +153,7 @@
       justify-content: space-between;
       border-bottom: none;
       margin-bottom: 24px;
-      padding: 39 0 24px 0;
+      padding: 39 0 24px;
     }
 
     .icon--close {margin-right: 38px;}
@@ -191,7 +192,7 @@
       grid-column: 5 / -1;
       max-width: 144px;
       position: relative;
-      bottom: 0px;
+      bottom: 0;
     }
   }
 
