--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -1,7 +1,7 @@
 .section-title {
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
 
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 36px;
@@ -11,9 +11,9 @@
 
 @include on-tablet {
   .section-title {
-    margin: 0 0 48px 0;
+    margin: 0 0 48px;
 
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 48px;
     font-weight: 700;
     line-height: 48px;
@@ -24,6 +24,6 @@
 
 @include on-desktop {
   .section-title {
-    margin: 0 0 56px 0;
+    margin: 0 0 56px;
   }
 }
