Update package dependencies and fix Instagram icon URL in styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -389,7 +389,7 @@ legend {
 }
 
 .icon__instagram {
-  background-image: url('/src/images/icons/instagram\ \(3\).svg');
+  background-image: url('/src/images/icons/instagram.svg');
 }
 
 .logo {
