grids changed + minor improvements

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -28,11 +28,11 @@
 
 @mixin mobile-grid {
   display: grid;
-  grid-template-columns: repeat(2, 130px);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 @mixin tablet-grid {
-  grid-template-columns: repeat(6, 100px);
+  grid-template-columns: repeat(6, 1fr);
 }
 
 @mixin tablet-extra-grid {
@@ -40,7 +40,7 @@
 }
 
 @mixin desktop-grid {
-  grid-template-columns: repeat(12, 70px);
+  grid-template-columns: repeat(12, 1fr);
 }
 
 @mixin desktop-extra-grid {
