--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,12 +29,14 @@ a,
 span,
 li {
   font-size: $fzS;
+  caret-color: transparent;
 }
 
 h1,
 h2 {
   @include bold-monsterrat;
 
+  caret-color: transparent;
   text-align: center;
 
   @media screen and (min-width: 768px) {
@@ -75,6 +77,7 @@ h2 {
 h3 {
   @include monsterrat;
 
+  caret-color: transparent;
   font-size: 28px;
   display: flex;
   align-items: center;
@@ -180,7 +183,6 @@ input:-webkit-autofill {
   box-shadow: 0 0 0 1000px $bgColor inset !important;
 }
 
-
 button {
   cursor: pointer;
 }
@@ -228,7 +230,8 @@ ul {
   @include mobile-grid;
   @include transition;
 
-  padding: 27px 0;
+  box-sizing: border-box;
+  padding: 27px 20px;
   background-color: $utilityColor;
   color: $secondFont;
   position: absolute;
@@ -243,13 +246,14 @@ ul {
   @media screen and (min-width: 768px) {
     @include tablet-grid;
 
-    padding: 40px 0;
+    padding: 40px 34px;
   }
 
   @media screen and (min-width: 1280px) {
     @include desktop-grid;
 
     column-gap: 30px;
+    padding: 40px 55px;
   }
 
   &__close {
@@ -514,20 +518,20 @@ ul {
 
     column-gap: 30px;
     justify-content: center;
+    padding: 0 20px;
 
     @media screen and (min-width: 768px) {
       grid-column: 1 / span 6;
       grid-area: interact;
-      padding-top: 127px;
+      padding: 127px 0 0 34px;
       gap: 38px 20px;
-      grid-template-columns: repeat(3, 100px);
+      grid-template-columns: repeat(3, 1fr);
     }
 
     @media screen and (min-width: 1280px) {
       @include desktop-extra-grid;
 
-      padding-top: 206px;
-      padding-bottom: 118px;
+      padding: 206px 0 118px 55px;
       grid-column: 1 / span 6;
       gap: 89px 30px;
     }
@@ -593,6 +597,18 @@ ul {
       &:not(:last-child) {
         margin-bottom: 104px;
       }
+    }
+  }
+
+  & > :not(:last-child) {
+    padding: 0 20px;
+
+    @media screen and (min-width: 768px) {
+      padding: 0 34px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      padding: 0 55px;
     }
   }
 
@@ -845,7 +861,6 @@ ul {
 
       @media screen and (min-width: 1280px) {
         @include hover(transform, scale(1.07));
-
       }
 
       display: flex;
@@ -971,6 +986,11 @@ ul {
 
   &__submit {
     display: flex;
+    padding: 0 20px;
+
+    @media screen and (min-width: 768px) {
+      padding: unset;
+    }
 
     @media screen and (min-width: 1280px) {
       grid-column: auto / span 6;
@@ -1052,15 +1072,21 @@ ul {
   margin: 50px 0 55px;
   column-gap: 20px;
   justify-content: center;
+  padding: 0 20px;
 
   @media screen and (min-width: 768px) {
     @include tablet-grid;
+
+    margin: 51px 0 36px;
+    padding: 0 34px;
   }
 
   @media screen and (min-width: 1280px) {
     @include desktop-grid;
 
+    margin: 48px 0 35px;
     column-gap: 30px;
+    padding: 0 55px;
   }
 
   &__logo {
