--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -8,3 +8,6 @@
 @import 'blocks/event';
 @import 'blocks/gallery';
 @import 'blocks/swiper';
+@import 'blocks/subscribe';
+@import 'blocks/form';
+@import 'blocks/footer';
