--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -132,7 +132,7 @@
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url('../images/picture_sunset.png');
+    background-image: url(../images/picture_sunset.png);
 
 
     @include on-tablet {
