--- a/src/styles/blocks/_icons.scss
+++ b/src/styles/blocks/_icons.scss
@@ -9,8 +9,12 @@
     background-image: url(../images/icons/icon-burger-menu.svg);
   }
 
-  &--link {
-    background-image: url(../images/icons/icon-arrow-link.svg);
+  &--white-arrow {
+    background-image: url(../images/icons/icon-arrow-white.svg);
+  }
+
+  &--black-arrow {
+    background-image: url(../images/icons/icon-arrow-black.svg);
   }
 
   &--close {
