--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -1,4 +1,16 @@
 .events {
+  &__container {
+    margin-bottom: 100px;
+
+    @include on-tablet {
+      margin-bottom: 88px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 200px;
+    }
+  }
+
   &__title {
     margin-bottom: 40px;
 
