--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,6 +1,15 @@
 .gallery {
+  &__container {
+    margin-bottom: 200px;
+  }
+
   &__title {
     margin-bottom: 40px;
+
+    @include on-desktop {
+      margin-bottom: 56px;
+      text-align: left;
+    }
   }
 
   &__swiper {
