--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -5,10 +5,12 @@
   width: auto;
 
   @include on-tablet {
+    grid-column: 2 / -2;
     gap: 16px;
   }
 
   @include on-desktop {
+    grid-column: 4 / -4;
     gap: 30px;
   }
 
