--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
 $c-gray: #eee;
+
+$tablet-min-width: 640px;
+$small-desktop-min-width: 1280px;
+$desktop-min-width: 1440px;
+
+$mobile-padding-inline: 20px;
+$tablet-padding-inline: 34px;
+$small-desktop-padding-inline: 55px;
+$desktop-padding-inline: 75px;
