--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,18 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  src: url('../fonts/IBMPlexSans-Bold.ttf') format('truetype');
+  src: url('../fonts/IBMPlexSans-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
+  src: url('../fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
