--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,38 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin on-small-desktop {
+  @media (min-width: $small-desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $desktop-min-width) {
+    max-width: 1440px;
+    padding-inline: $desktop-padding-inline;
+    @content;
+  }
+}
+
+@mixin current-events {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .event__img-box {
+    width: 670px;
+    height: 520px;
+  }
+
+  .event__content {
+    width: 370px;
+  }
+}
