--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -1,7 +1,10 @@
 @import 'blocks/page';
 @import 'blocks/header';
+@import 'blocks/logo';
 @import 'blocks/h2-title';
 @import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/schedule';
 @import 'blocks/icons';
 @import 'blocks/button';
 @import 'blocks/events';
@@ -11,3 +14,4 @@
 @import 'blocks/subscribe';
 @import 'blocks/form';
 @import 'blocks/footer';
+@import 'blocks/contacts';
