--- a/src/styles/blocks/_icons.scss
+++ b/src/styles/blocks/_icons.scss
@@ -20,4 +20,12 @@
   &--close {
     background-image: url(../images/icons/icon-close-menu.svg);
   }
+
+  &--facebook {
+    background-image: url(../images/icons/icon-facebook.svg);
+  }
+
+  &--instagram {
+    background-image: url(../images/icons/icon-instagram.svg);
+  }
 }
