--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -33,6 +33,8 @@
   &__img {
     max-width: 100%;
 
+    @include hover(transform, scale(1.03));
+
     &--1 {
       grid-column: span 4;
       height: 600px;
