--- a/src/styles/blocks/_icons.scss
+++ b/src/styles/blocks/_icons.scss
@@ -5,6 +5,8 @@
   background-position: center;
   background-repeat: no-repeat;
 
+  @include hover(scale, 1.2);
+
   &--burger {
     background-image: url(../images/icons/icon-burger-menu.svg);
   }
