fixed images width

--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -127,7 +127,6 @@
     display: block;
     height: 210px;
     width: auto;
-    margin: 0 -20px 102px;
     padding-bottom: 0;
     position: relative;
     background-size: cover;
@@ -137,12 +136,10 @@
 
     @include on-tablet {
       height: 390px;
-      margin: 0 -39px 102px;
     }
 
     @include on-desktop {
       height: 550px;
-      margin: 0 -55px 102px;
     }
   }
 
@@ -180,6 +177,7 @@
 
     @include on-tablet {
       padding-inline: 0;
+      max-width: 90%;
     }
   }
 
