--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -1,13 +1,15 @@
 .events {
-  &__container {
-    margin-bottom: 100px;
+  &__event {
+    &--lecture {
+      margin-bottom: 183px;
 
-    @include on-tablet {
-      margin-bottom: 88px;
-    }
+      @include on-tablet {
+        margin-bottom: 208px;
+      }
 
-    @include on-desktop {
-      margin-bottom: 200px;
+      @include on-desktop {
+        margin-bottom: 302px;
+      }
     }
   }
 
