create landing page Museum

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,15 @@
-h1 {
-  @extend %h1;
+.main-title {
+  @extend %main-title;
+}
+
+.section-title {
+  @extend %section-title;
+}
+
+.subtitle {
+  @extend %subtitle;
+}
+
+.footer-item-title {
+  @extend %footer-item-title;
 }
