--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,46 @@
-%h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+%main-title {
+  @include font(700, 72px, 86.4px);
+
+  @include on-tablet {
+    @include font(700, 54px, 64.8px);
+  }
+
+  @include on-mobile {
+    @include font(700, 45px, 45px);
+
+    text-align: center;
+  }
+}
+
+%section-title {
+  @include font(700, 48px, 48px);
+
+  max-width: 1440px;
+  margin-inline: auto;
+  padding-inline: 55px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-mobile {
+    padding-inline: 20px;
+  }
+}
+
+%subtitle {
+  @include font(400, 36px, 36px);
+
+  font-family: Montserrat, sans-serif;
+
+  @include on-mobile {
+    @include font(400, 28px, 28px);
+  }
+}
+
+%footer-item-title {
+  @include font(400, 14px, 19.69px);
+
+  font-family: IBMPlexSans, sans-serif;
+  margin-bottom: 20px;
 }
