--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
-$c-gray: #eee;
+$white-color: #fff;
+$marshland-color: #0f0e08;
+$black-color: #000;
+$green-pea-color: #1a5a4c;
+$pale-sky-color: #687480;
+$pomegranate-color: #f14a27;
+$tundora-color: #4e4e4e;
+$alto-color: #e0e0e0;
+$tablet-max-width: 1279px;
+$mobile-max-width: 676px;
