--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,98 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin set-size($width: auto, $height: auto) {
+  height: $height;
+  width: $width;
+}
+
+@mixin flex($direction: row, $content: flex-start, $items: stretch) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $content;
+  align-items: $items;
+}
+
+@mixin font($font-weight: 400, $font-size: 16px, $line-height: 24px) {
+  font-weight: $font-weight;
+  font-size: $font-size;
+  line-height: $line-height;
+}
+
+@mixin on-tablet {
+  @media (max-width: $tablet-max-width) {
+    @content;
+  }
+}
+
+@mixin on-mobile {
+  @media (max-width: $mobile-max-width) {
+    @content;
+  }
+}
+
+@mixin content-padding-inline {
+  margin-inline: auto;
+  padding-inline: 55px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-mobile {
+    padding-inline: 20px;
+  }
+}
+
+@mixin page-grid {
+  --columns: 12;
+
+  display: grid;
+  column-gap: 30px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 6;
+  }
+
+  @include on-mobile {
+    --columns: 2;
+
+    column-gap: 20px;
+  }
+}
+
+@mixin link-style($font-weight, $font-size, $line-height, $dot-size) {
+  position: relative;
+
+  @include font($font-weight, $font-size, $line-height);
+
+  font-family: IBMPlexSans, sans-serif;
+  transition: color 0.3s ease-in-out;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: -15px;
+    content: '';
+    transform: translateY(-50%) scale(0);
+
+    @include set-size($dot-size, $dot-size);
+
+    background-color: $pomegranate-color;
+    transition:
+      transform 0.3s ease-in-out,
+      opacity 0.3s ease-in-out;
+    opacity: 0;
+  }
+
+  &:hover {
+    color: $pomegranate-color;
+
+    &::before {
+      transform: translateY(-50%) scale(1);
+      opacity: 1;
+    }
+  }
+}
