add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/vars';
+@import 'utils/mixins';
+@import 'utils/fonts';
+@import 'blocks/page';
+@import 'blocks/titles';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/events';
+@import 'blocks/gallery';
+@import 'blocks/top-bar';
+@import 'blocks/lecture';
+@import 'blocks/subscription';
+@import 'blocks/footer';
+@import 'blocks/right-side__footer-desktop';
+@import 'blocks/aside';
