--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -113,7 +113,10 @@
     width: 50px;
     background-color: #fff;
     color: #1a5a4c;
+    text-align: center;
+    align-content: center;
     line-height: 16px;
+    font-size: 16px;
     border-radius: 50%;
     border: 1px solid #1a5a4c;
     padding: 0;
@@ -176,6 +179,15 @@
   &__name {
     margin-top: 0;
   }
+
+  &__contact {
+    color: #0f0e08;
+  }
+
+  &__contact:hover {
+    transition-duration: $efferctDuration;
+    color: #f14a27;
+  }
 }
 
 .nav--bottom-menu {
@@ -216,18 +228,21 @@
       grid-column: 4 / -2;
     }
   }
+
   &__item {
     display: flex;
     align-items: flex-start;
     margin-bottom: 20px;
-    transition-duration: $efferctDuration;
-
-    @include hover(transform, scale(1.1));
   }
 
   &__link {
     color: #0f0e08;
     cursor: pointer;
+  }
+
+  &__link:hover {
+    transition-duration: $efferctDuration;
+    color: #f14a27;
   }
 }
 
