--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -28,6 +28,24 @@
       pointer-events: all;
     }
   }
+
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+  }
+
+  &:has(.page__menu:target)::before {
+    opacity: 1;
+    pointer-events: all;
+  }
 }
 
 .page,
