--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+
+
+$padding-inline-mobile: 20px;
+$padding-inline-tablet: 34px;
+$padding-inline-desktop: 56px;
+$indent-menu-mobile: 26px;
+$indent-menu-tablet: 40px;
