--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/header';
+@import './blocks/menu';
+@import './blocks/article';
+@import './blocks/main';
+@import './blocks/footer';
+@import './blocks/page';
