--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -35,7 +35,7 @@
 
     &:hover {
       transform: scale(1.03);
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
     }
   }
 
@@ -91,7 +91,7 @@
   }
 
   &__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     line-height: 28px;
     letter-spacing: 0%;
