--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -90,7 +90,7 @@
   }
 
   &__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
