--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -171,22 +171,26 @@
       transition: all 0.3s ease-in-out;
     }
 
+    &:hover {
+      border: 1px solid rgba(26, 90, 76, 0.9);
+    }
+
     &:hover .header__button-icon {
       transform: translateX(3px);
     }
 
     &:hover .header__button-square {
-      transform: translateX(3px);
+      width: 30%;
       background-color: rgba(26, 90, 76, 0.9);
     }
 
     &:active .header__button-square {
-      transform: translateX(3px);
       background-color: rgba(18, 71, 59, 0.95);
     }
 
     &:active {
       transform: scale(0.98);
+      border-color: rgba(18, 71, 59, 0.95);
     }
   }
 
